syntax = "proto3";
package go_app.v1;

import "go_app/v1/types.proto";
import "go_app/v1/enums.proto";

// Do not delete these unless you know what you're doing
message Empty {};
message ListRequest {
  int32 limit = 1;
  int32 offset = 2;
  string orderBy = 3;
}
message DeleteRequest {
  repeated string ids = 1;
}
message DeleteResponse {
  repeated string errors = 1;
}
message GetRequest {
  repeated string ids = 1;
}

// Below here are the messages that aren't generic
message Hellos {
  repeated Hello hellos = 1;
}

message Todos {
  repeated Todo data = 1;
}

message UpsertHellosRequest {
  repeated Hello hellos = 1;
  repeated string fields = 2;
}

message UpsertTodosRequest {
  repeated Todo data = 1;
  repeated string fields = 2;
}
message DeleteTodosRequest {
  repeated string ids = 1;
}
message DeleteTodosResponse {
  repeated string errors = 1;
}
message ListTodosRequest {
  int32 limit = 1;
  int32 offset = 2;
  string orderBy = 3;
}
message GetTodosRequest {
  repeated string ids = 1;
}